# plasma-terminal-wallpaper

./: .gitignore  CMakeLists.txt  install.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: config.qml  main.qml  qmldir
src/: plugin.cpp  terminal.cpp  terminal.h
